@@ -29,6 +29,9 @@ Changes since 0.20.1
 * docs/ref/docutils.dtd
 
   - The <image> element accepts the new attribute "loading".
+  - The <math_block> element uses the attribute "xml:space"
+    (actually since Docutils 0.8).
+  - The <raw> element may contain text only (no inline elements).
 
 * docutils/frontend.py
 
